--- a/lean.bib
+++ b/lean.bib
@@ -110,7 +110,7 @@ series={TFP 2009},
 
 @inproceedings{coq-ring-reflection,
  author = {Boutin, Samuel},
- title = {Using Reflection to Build Efficient and Certified Decision Procedures},
+ title = {Using reflection to build efficient and certified decision procedures},
  year = {1997},
  isbn = {354063388X},
  publisher = {Springer-Verlag},
@@ -126,7 +126,7 @@ author="Akbarpour, Behzad
 and Paulson, Lawrence C.",
 editor="Dershowitz, Nachum
 and Voronkov, Andrei",
-title="Extending a Resolution Prover for Inequalities on Elementary Functions",
+title="Extending a resolution prover for inequalities on elementary functions",
 booktitle="Logic for Programming, Artificial Intelligence, and Reasoning",
 year="2007",
 publisher="Springer Berlin Heidelberg",
@@ -154,8 +154,7 @@ isbn="978-3-540-49567-3"
 editor="Nipkow, Tobias
 and Wenzel, Markus
 and Paulson, Lawrence C.",
-title="1. The Basics",
-bookTitle="Isabelle/HOL: A Proof Assistant for Higher-Order Logic",
+title="Isabelle/HOL: A Proof Assistant for Higher-Order Logic",
 year="2002",
 publisher="Springer Berlin Heidelberg",
 address="Berlin, Heidelberg",
