--- a/lean.bib
+++ b/lean.bib
@@ -3,12 +3,12 @@
  title = {A metaprogramming framework for formal verification},
  year = {2017},
  issue_date = {August 2017},
- publisher = {Association for Computing Machinery},
+ publisher = {ACM},
  address = {New York, NY, USA},
- volume = {1},
+ volume = {1, ICFP 2017},
  % url = {https://doi.org/10.1145/3110278},
  doi = {10.1145/3110278},
- journal = {Proc. ACM Program. Lang.},
+ journal = {Proceedings of the ACM on Programming Languages (PACMPL)},
  month = aug,
  articleno = {Article 34},
  numpages = {29},
@@ -24,13 +24,10 @@ and von Raumer, Jakob",
 editor="Felty, A. P.
 and Middeldorp, A.",
 title="The Lean theorem prover (system description)",
-booktitle="Automated Deduction",
-series="CADE-25",
+series="International Conference on Automated Deduction (CADE-25)",
 year="2015",
 publisher="Springer International Publishing",
-address="Cham",
 pages="378--388",
-abstract="Lean is a new open source theorem prover being developed at Microsoft Research and Carnegie Mellon University, with a small trusted kernel based on dependent type theory. It aims to bridge the gap between interactive and automated theorem proving, by situating automated tools and methods in a framework that supports user interaction and the construction of fully specified axiomatic proofs. Lean is an ongoing and long-term effort, but it already provides many useful components, integrated development environments, and a rich API which can be used to embed it into other systems. It is currently being used to formalize category theory, homotopy type theory, and abstract algebra. We describe the project goals, system architecture, and main features, and we discuss applications and continuing work.",
 }
 
 @InProceedings{mathlib,
@@ -38,8 +35,7 @@ abstract="Lean is a new open source theorem prover being developed at Microsoft 
 	author={{The mathlib Community}},
 	year={2020},
 	editor={Blanchette, J. and Hrițcu, C.},
-	booktitle = {9th ACM SIGPLAN International Conference on Certified Programs and Proofs},
-	series = {CPP 2020},
+	series = {Certified Programs and Proofs (CPP 2020)},
 	publisher = {ACM},
 }
 
@@ -67,8 +63,7 @@ abstract="We present a new implementation of a reflexive tactic which solves equ
 @inproceedings{monad-transformers,
 	author = {Liang, Sheng and Hudak, Paul and Jones, Mark},
 	title = {Monad transformers and modular interpreters},
-	booktitle = {Proceedings of the 22nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
-	series = {POPL '95},
+	series = {Principles of Programming Languages (POPL '95)},
 	year = {1995},
 	location = {San Francisco, California, USA},
 	pages = {333--343},
@@ -130,7 +125,6 @@ title="Extending a resolution prover for inequalities on elementary functions",
 booktitle="Logic for Programming, Artificial Intelligence, and Reasoning",
 year="2007",
 publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
 pages="47--61",
 abstract="Experiments show that many inequalities involving exponentials and logarithms can be proved automatically by combining a resolution theorem prover with a decision procedure for the theory of real closed fields (RCF). The method should be applicable to any functions for which polynomial upper and lower bounds are known. Most bounds only hold for specific argument ranges, but resolution can automatically perform the necessary case analyses. The system consists of a superposition prover (Metis) combined with John Harrison's RCF solver and a small amount of code to simplify literals with respect to the RCF theory.",
 isbn="978-3-540-75560-9"
@@ -144,7 +138,6 @@ title="HOL Light: A tutorial introduction",
 booktitle="Formal Methods in Computer-Aided Design",
 year="1996",
 publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
 pages="265--269",
 abstract="HOL Light is a new version of the HOL theorem prover. While retaining the reliability and programmability of earlier versions, it is more elegant, lightweight, powerful and automatic; it will be the basis for the Cambridge component of the HOL-2000 initiative to develop the next generation of HOL theorem provers. HOL Light is written in CAML Light, and so will run well even on small machines, e.g. PCs and Macintoshes with a few megabytes of RAM. This is in stark contrast to the resource-hungry systems which are the norm in this field, other versions of HOL included. Among the new features of this version axe a powerful simplifier, effective first order automation, simple higher-order matching and very general support for inductive and recursive definitions.",
 isbn="978-3-540-49567-3"
@@ -157,7 +150,6 @@ and Paulson, Lawrence C.",
 title="Isabelle/HOL: A Proof Assistant for Higher-Order Logic",
 year="2002",
 publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
 abstract="This book is a tutorial on how to use the theorem prover Isabelle/HOL as a specification and verification system. Isabelle is a generic system for implementing logical formalisms, and Isabelle/HOL is the specialization of Isabelle for HOL,which abbreviates Higher-Order Logic. We introduce HOL step by step following the equation HOL = Functional Programming+ Logic.",
 isbn="978-3-540-45949-1",
 doi="10.1007/3-540-45949-9_1",
